RESOLVED FIXED142926
FunctionBodyNode should known where its parameters started
https://bugs.webkit.org/show_bug.cgi?id=142926
Summary FunctionBodyNode should known where its parameters started
Geoffrey Garen
Reported 2015-03-20 15:52:15 PDT
FunctionBodyNode should known where its parameters started
Attachments
Patch (26.53 KB, patch)
2015-03-20 15:56 PDT, Geoffrey Garen
rniwa: review+
Geoffrey Garen
Comment 1 2015-03-20 15:56:10 PDT
WebKit Commit Bot
Comment 2 2015-03-20 15:58:41 PDT
Attachment 249140 [details] did not pass style-queue: ERROR: Source/JavaScriptCore/parser/Nodes.cpp:178: Wrong number of spaces before statement. (expected: 8) [whitespace/indent] [4] ERROR: Source/JavaScriptCore/parser/Nodes.cpp:179: Wrong number of spaces before statement. (expected: 8) [whitespace/indent] [4] ERROR: Source/JavaScriptCore/parser/Nodes.cpp:180: Wrong number of spaces before statement. (expected: 8) [whitespace/indent] [4] Total errors found: 3 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
Ryosuke Niwa
Comment 3 2015-03-20 16:33:43 PDT
Comment on attachment 249140 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=249140&action=review > Source/JavaScriptCore/parser/Nodes.cpp:174 > + ParserArena&, const JSTokenLocation& startLocation, > + const JSTokenLocation& endLocation, unsigned startColumn, unsigned endColumn, > + int functionKeywordStart, int functionNameStart, int parametersStart, > + bool isInStrictContext, ConstructorKind constructorKind) These lines need to be indented further by 4 spaces (8 spaces total).
Geoffrey Garen
Comment 4 2015-03-20 16:38:26 PDT
Note You need to log in before you can comment on or make changes to this bug.